maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:53: error: value += is not a member of Int
  y += 1;
    ^ShortestPathMaze:63: error: value += is not a member of Int
  x += 1;
    ^